syntax = "proto3";
option go_package = "ask.systems/daemon/portal/embedportal";

import "gate/service.proto";

message Registration {
	RegisterRequest request = 1;
	// Note: the Certificate field is not filled in the stored copy because it is
	// not passed through. It could have been done but it wasn't necessary.
	Lease lease = 2;
}

message Certificate {
	string domain = 3;
	bytes key = 1;
	repeated bytes der = 2;
}

message State {
	repeated Registration registrations = 1;
	// Just the certs no keys because we make a new one every time portal restarts
	repeated bytes rootCAs = 2;
	string api_token = 3;
	bytes acme_account = 5;
	repeated Certificate certificates = 4; // These are the acme auto TLS certs
}

// vim: set noexpandtab:
